fix nav badge on mobile

--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -60,7 +60,18 @@
   background-position-y: -100%;
   animation: fade-down 2s ease-in-out forwards;
 }
-
+@media screen and (max-width:1023px){
+    #lblCartCount {
+        text-align: center;
+        padding: 0;
+        font-size: 12px !important;
+        margin-left: 14px;
+        margin-top: -14px;
+        margin-bottom: 0;
+        height: 16px !important;
+        width: 16px !important;
+      }
+}
 @keyframes fade-down {
   to {
     background-position-y: top;
